// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AIVerdictBlock > matches snapshot 1`] = `
<div
  style="background: var(--ink); color: var(--bg); border-radius: 24px; position: relative; overflow: hidden;"
>
  <div
    aria-hidden="true"
    style="position: absolute; right: -80px; top: -40px; opacity: 0.06; color: var(--accent); pointer-events: none;"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="520"
      viewBox="0 0 32 32"
      width="520"
    >
      <circle
        cx="16"
        cy="16"
        opacity="0.35"
        r="14.5"
        stroke="var(--accent)"
        stroke-width="1"
      />
      <path
        d="M5 21 L16 8 L27 21"
        stroke="var(--accent)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.6"
      />
      <circle
        cx="16"
        cy="21"
        fill="var(--accent)"
        r="1.8"
      />
      <path
        d="M16 4 L16 7"
        stroke="var(--accent)"
        stroke-linecap="round"
        stroke-width="1.6"
      />
    </svg>
  </div>
  <div
    class="row gap-8"
    style="color: color-mix(in oklab, var(--bg) 55%, transparent); margin-bottom: 20px; position: relative; z-index: 1; display: flex; align-items: center; flex-wrap: wrap; gap: 8px;"
  >
    <span
      aria-hidden="true"
      class="live-dot"
      style="width: 7px; height: 7px; border-radius: 999px; background: var(--accent); flex-shrink: 0;"
    />
    <span
      class="mono"
      style="font-size: 10px; letter-spacing: 0.18em; text-transform: uppercase;"
    >
      Scout AI · investor verdict
    </span>
    <span
      style="flex: 1 1 0%;"
    />
    <span
      class="mono"
      style="font-size: 10px; letter-spacing: 0.12em; color: color-mix(in oklab, var(--bg) 40%, transparent);"
    >
      claude · sonnet 4.6
    </span>
  </div>
  <div
    class="serif"
    style="line-height: 1.1; letter-spacing: -0.025em; color: var(--bg); text-wrap: balance; max-width: 920px; position: relative; z-index: 1;"
  >
    Hard pass.
  </div>
  <div
    class="serif"
    style="line-height: 1.5; color: color-mix(in oklab, var(--bg) 78%, transparent); margin-top: 22px; max-width: 880px; position: relative; z-index: 1;"
  >
    Deeply negative cash flow on every scenario.
  </div>
</div>
`;

exports[`DealScore > matches snapshot 1`] = `
<div
  aria-label="Deal score: 8 out of 95"
  style="display: flex; flex-direction: column; align-items: center; gap: 8px;"
>
  <div
    style="position: relative; width: 120px; height: 120px;"
  >
    <svg
      aria-hidden="true"
      height="120"
      role="img"
      viewBox="0 0 120 120"
      width="120"
    >
      <circle
        cx="60"
        cy="60"
        fill="none"
        r="55.5"
        stroke="var(--line)"
        stroke-width="9"
      />
      <circle
        cx="60"
        cy="60"
        fill="none"
        r="55.5"
        stroke="var(--fail)"
        stroke-dasharray="348.71678454846705"
        stroke-dashoffset="319.35116058649083"
        stroke-linecap="round"
        stroke-width="9"
        style="transition: none;"
        transform="rotate(-90 60 60)"
      />
    </svg>
    <div
      style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 11px;"
    >
      <span
        class="serif tabular"
        style="font-size: 50.4px; line-height: 1; font-weight: 400; color: var(--ink);"
      >
        8
      </span>
      <span
        class="mono"
        style="font-size: 9px; color: var(--muted); text-transform: uppercase; letter-spacing: 0.12em; text-align: center; margin-top: 6px; white-space: nowrap;"
      >
        Deal score / 100
      </span>
      <span
        style="margin-top: 6px; font-size: 11px; font-weight: 500; color: var(--fail); padding: 3px 10px; border-radius: 999px; border: 1px solid var(--fail); background: color-mix(in oklab, var(--fail) 8%, transparent); white-space: nowrap;"
      >
        Hard pass
      </span>
    </div>
  </div>
</div>
`;

exports[`Metric > matches snapshot 1`] = `
<div
  class="col"
  style="padding: 18px 20px; border-radius: 14px; background: var(--surface); border: 1px solid var(--line); gap: 6px; box-shadow: var(--shadow-card);"
>
  <div
    class="mono"
    style="font-size: 10px; letter-spacing: 0.14em; text-transform: uppercase; color: var(--muted);"
  >
    Cap rate
  </div>
  <div
    class="serif tabular"
    style="font-size: 30px; line-height: 1; color: var(--fail);"
  >
    1.47%
  </div>
  <div
    class="mono"
    style="font-size: 11px; color: var(--muted);"
  >
    Below 3% threshold
  </div>
</div>
`;

exports[`MiniMap > matches snapshot 1`] = `
<div
  aria-label="Map showing rental comps near 5702-5 Buttermill Ave, Vaughan"
  role="img"
  style="position: relative; height: 280px; border-radius: 14px; overflow: hidden; background: var(--bg-elev); border: 1px solid var(--line);"
>
  <svg
    aria-hidden="true"
    height="100%"
    preserveAspectRatio="xMidYMid slice"
    style="display: block;"
    viewBox="0 0 400 240"
    width="100%"
  >
    <defs>
      <lineargradient
        id="mapWash"
        x1="0"
        x2="0"
        y1="0"
        y2="1"
      >
        <stop
          offset="0%"
          stop-color="color-mix(in oklab, var(--accent) 5%, var(--bg-elev))"
        />
        <stop
          offset="100%"
          stop-color="var(--bg-elev)"
        />
      </lineargradient>
      <pattern
        height="6"
        id="mapMicro"
        patternUnits="userSpaceOnUse"
        width="6"
      >
        <rect
          fill="transparent"
          height="6"
          width="6"
        />
        <circle
          cx="0.5"
          cy="0.5"
          fill="currentColor"
          opacity="0.05"
          r="0.4"
        />
      </pattern>
    </defs>
    <rect
      fill="url(#mapWash)"
      height="240"
      width="400"
    />
    <rect
      fill="url(#mapMicro)"
      height="240"
      style="color: var(--ink);"
      width="400"
    />
    <path
      d="M 280 -20 Q 320 30 380 50 L 410 60 L 410 -10 Z"
      fill="color-mix(in oklab, var(--accent) 14%, var(--bg-elev))"
      opacity="0.45"
    />
    <path
      d="M 280 -20 Q 320 30 380 50"
      fill="none"
      stroke="color-mix(in oklab, var(--accent) 25%, transparent)"
      stroke-width="0.6"
    />
    <rect
      fill="color-mix(in oklab, var(--pass) 20%, transparent)"
      height="68"
      rx="3"
      stroke="color-mix(in oklab, var(--pass) 25%, transparent)"
      stroke-width="0.5"
      width="118"
      x="170"
      y="78"
    />
    <rect
      fill="none"
      height="64"
      rx="2"
      stroke="color-mix(in oklab, var(--pass) 18%, transparent)"
      stroke-dasharray="2 3"
      stroke-width="0.5"
      width="114"
      x="172"
      y="80"
    />
    <g
      style="color: var(--line-strong);"
    >
      <g>
        <line
          opacity="0.45"
          stroke="currentColor"
          stroke-width="9"
          x1="-10"
          x2="410"
          y1="84"
          y2="80"
        />
        <line
          stroke="var(--bg-elev)"
          stroke-width="7"
          x1="-10"
          x2="410"
          y1="84"
          y2="80"
        />
        <line
          opacity="0.85"
          stroke="var(--bg)"
          stroke-width="5"
          x1="-10"
          x2="410"
          y1="84"
          y2="80"
        />
        <line
          opacity="0.7"
          stroke="color-mix(in oklab, var(--accent) 40%, transparent)"
          stroke-dasharray="3 4"
          stroke-width="0.5"
          x1="-10"
          x2="410"
          y1="84"
          y2="80"
        />
      </g>
      <g>
        <line
          opacity="0.45"
          stroke="currentColor"
          stroke-width="9"
          x1="-10"
          x2="410"
          y1="152"
          y2="155"
        />
        <line
          stroke="var(--bg-elev)"
          stroke-width="7"
          x1="-10"
          x2="410"
          y1="152"
          y2="155"
        />
        <line
          opacity="0.85"
          stroke="var(--bg)"
          stroke-width="5"
          x1="-10"
          x2="410"
          y1="152"
          y2="155"
        />
        <line
          opacity="0.7"
          stroke="color-mix(in oklab, var(--accent) 40%, transparent)"
          stroke-dasharray="3 4"
          stroke-width="0.5"
          x1="-10"
          x2="410"
          y1="152"
          y2="155"
        />
      </g>
      <g>
        <line
          opacity="0.45"
          stroke="currentColor"
          stroke-width="9"
          x1="168"
          x2="170"
          y1="-10"
          y2="250"
        />
        <line
          stroke="var(--bg-elev)"
          stroke-width="7"
          x1="168"
          x2="170"
          y1="-10"
          y2="250"
        />
        <line
          opacity="0.85"
          stroke="var(--bg)"
          stroke-width="5"
          x1="168"
          x2="170"
          y1="-10"
          y2="250"
        />
      </g>
      <g>
        <line
          opacity="0.45"
          stroke="currentColor"
          stroke-width="9"
          x1="290"
          x2="288"
          y1="-10"
          y2="250"
        />
        <line
          stroke="var(--bg-elev)"
          stroke-width="7"
          x1="290"
          x2="288"
          y1="-10"
          y2="250"
        />
        <line
          opacity="0.85"
          stroke="var(--bg)"
          stroke-width="5"
          x1="290"
          x2="288"
          y1="-10"
          y2="250"
        />
      </g>
    </g>
    <g
      opacity="0.7"
      stroke="var(--line)"
      stroke-width="2"
    >
      <line
        x1="-10"
        x2="170"
        y1="22"
        y2="22"
      />
      <line
        x1="200"
        x2="410"
        y1="22"
        y2="22"
      />
      <line
        x1="-10"
        x2="170"
        y1="46"
        y2="46"
      />
      <line
        x1="200"
        x2="410"
        y1="46"
        y2="46"
      />
      <line
        x1="-10"
        x2="170"
        y1="112"
        y2="112"
      />
      <line
        x1="-10"
        x2="170"
        y1="138"
        y2="138"
      />
      <line
        x1="290"
        x2="410"
        y1="112"
        y2="112"
      />
      <line
        x1="290"
        x2="410"
        y1="138"
        y2="138"
      />
      <line
        x1="-10"
        x2="170"
        y1="180"
        y2="180"
      />
      <line
        x1="-10"
        x2="170"
        y1="206"
        y2="206"
      />
      <line
        x1="290"
        x2="410"
        y1="180"
        y2="180"
      />
      <line
        x1="290"
        x2="410"
        y1="206"
        y2="206"
      />
      <line
        x1="40"
        x2="40"
        y1="-10"
        y2="250"
      />
      <line
        x1="86"
        x2="86"
        y1="-10"
        y2="78"
      />
      <line
        x1="86"
        x2="86"
        y1="160"
        y2="250"
      />
      <line
        x1="130"
        x2="130"
        y1="-10"
        y2="78"
      />
      <line
        x1="130"
        x2="130"
        y1="160"
        y2="250"
      />
      <line
        x1="218"
        x2="218"
        y1="-10"
        y2="78"
      />
      <line
        x1="218"
        x2="218"
        y1="160"
        y2="250"
      />
      <line
        x1="252"
        x2="252"
        y1="-10"
        y2="78"
      />
      <line
        x1="252"
        x2="252"
        y1="160"
        y2="250"
      />
      <line
        x1="338"
        x2="338"
        y1="-10"
        y2="250"
      />
      <line
        x1="380"
        x2="380"
        y1="-10"
        y2="250"
      />
    </g>
    <g
      fill="var(--ink)"
      opacity="0.07"
    >
      <rect
        height="14"
        rx="1.5"
        width="18"
        x="44"
        y="30"
      />
      <rect
        height="14"
        rx="1.5"
        width="16"
        x="66"
        y="30"
      />
      <rect
        height="14"
        rx="1.5"
        width="22"
        x="86"
        y="30"
      />
      <rect
        height="14"
        rx="1.5"
        width="14"
        x="112"
        y="30"
      />
      <rect
        height="14"
        rx="1.5"
        width="24"
        x="130"
        y="30"
      />
      <rect
        height="18"
        rx="1.5"
        width="14"
        x="44"
        y="50"
      />
      <rect
        height="18"
        rx="1.5"
        width="22"
        x="62"
        y="50"
      />
      <rect
        height="18"
        rx="1.5"
        width="18"
        x="88"
        y="50"
      />
      <rect
        height="18"
        rx="1.5"
        width="16"
        x="110"
        y="50"
      />
      <rect
        height="18"
        rx="1.5"
        width="24"
        x="130"
        y="50"
      />
      <rect
        height="12"
        rx="1.5"
        width="18"
        x="180"
        y="22"
      />
      <rect
        height="12"
        rx="1.5"
        width="14"
        x="202"
        y="22"
      />
      <rect
        height="12"
        rx="1.5"
        width="22"
        x="220"
        y="22"
      />
      <rect
        height="12"
        rx="1.5"
        width="16"
        x="246"
        y="22"
      />
      <rect
        height="12"
        rx="1.5"
        width="20"
        x="266"
        y="22"
      />
      <rect
        height="16"
        rx="1.5"
        width="22"
        x="180"
        y="40"
      />
      <rect
        height="16"
        rx="1.5"
        width="18"
        x="206"
        y="40"
      />
      <rect
        height="16"
        rx="1.5"
        width="22"
        x="228"
        y="40"
      />
      <rect
        height="16"
        rx="1.5"
        width="18"
        x="254"
        y="40"
      />
      <rect
        height="16"
        rx="1.5"
        width="10"
        x="276"
        y="40"
      />
      <rect
        height="14"
        rx="1.5"
        width="18"
        x="296"
        y="30"
      />
      <rect
        height="14"
        rx="1.5"
        width="16"
        x="318"
        y="30"
      />
      <rect
        height="14"
        rx="1.5"
        width="24"
        x="338"
        y="30"
      />
      <rect
        height="14"
        rx="1.5"
        width="14"
        x="366"
        y="30"
      />
      <rect
        height="18"
        rx="1.5"
        width="18"
        x="296"
        y="50"
      />
      <rect
        height="18"
        rx="1.5"
        width="22"
        x="318"
        y="50"
      />
      <rect
        height="18"
        rx="1.5"
        width="16"
        x="344"
        y="50"
      />
      <rect
        height="18"
        rx="1.5"
        width="18"
        x="364"
        y="50"
      />
      <rect
        height="16"
        rx="1.5"
        width="22"
        x="44"
        y="96"
      />
      <rect
        height="16"
        rx="1.5"
        width="18"
        x="70"
        y="96"
      />
      <rect
        height="16"
        rx="1.5"
        width="22"
        x="92"
        y="96"
      />
      <rect
        height="16"
        rx="1.5"
        width="14"
        x="118"
        y="96"
      />
      <rect
        height="16"
        rx="1.5"
        width="22"
        x="136"
        y="96"
      />
      <rect
        height="20"
        rx="1.5"
        width="18"
        x="44"
        y="116"
      />
      <rect
        height="20"
        rx="1.5"
        width="22"
        x="66"
        y="116"
      />
      <rect
        height="20"
        rx="1.5"
        width="16"
        x="92"
        y="116"
      />
      <rect
        height="20"
        rx="1.5"
        width="22"
        x="112"
        y="116"
      />
      <rect
        height="20"
        rx="1.5"
        width="20"
        x="138"
        y="116"
      />
      <rect
        height="14"
        rx="1.5"
        width="22"
        x="310"
        y="96"
      />
      <rect
        height="14"
        rx="1.5"
        width="18"
        x="336"
        y="96"
      />
      <rect
        height="14"
        rx="1.5"
        width="16"
        x="358"
        y="96"
      />
      <rect
        height="22"
        rx="1.5"
        width="18"
        x="310"
        y="114"
      />
      <rect
        height="22"
        rx="1.5"
        width="22"
        x="332"
        y="114"
      />
      <rect
        height="22"
        rx="1.5"
        width="16"
        x="358"
        y="114"
      />
      <rect
        height="14"
        rx="1.5"
        width="16"
        x="44"
        y="164"
      />
      <rect
        height="14"
        rx="1.5"
        width="22"
        x="64"
        y="164"
      />
      <rect
        height="14"
        rx="1.5"
        width="18"
        x="90"
        y="164"
      />
      <rect
        height="14"
        rx="1.5"
        width="22"
        x="112"
        y="164"
      />
      <rect
        height="14"
        rx="1.5"
        width="16"
        x="138"
        y="164"
      />
      <rect
        height="18"
        rx="1.5"
        width="22"
        x="44"
        y="182"
      />
      <rect
        height="18"
        rx="1.5"
        width="18"
        x="70"
        y="182"
      />
      <rect
        height="18"
        rx="1.5"
        width="22"
        x="92"
        y="182"
      />
      <rect
        height="18"
        rx="1.5"
        width="16"
        x="118"
        y="182"
      />
      <rect
        height="18"
        rx="1.5"
        width="20"
        x="138"
        y="182"
      />
      <rect
        height="16"
        rx="1.5"
        width="22"
        x="296"
        y="162"
      />
      <rect
        height="16"
        rx="1.5"
        width="18"
        x="322"
        y="162"
      />
      <rect
        height="16"
        rx="1.5"
        width="22"
        x="344"
        y="162"
      />
      <rect
        height="18"
        rx="1.5"
        width="18"
        x="296"
        y="184"
      />
      <rect
        height="18"
        rx="1.5"
        width="22"
        x="318"
        y="184"
      />
      <rect
        height="18"
        rx="1.5"
        width="22"
        x="344"
        y="184"
      />
    </g>
    <rect
      fill="none"
      height="239"
      stroke="var(--line)"
      stroke-width="0.5"
      width="399"
      x="0.5"
      y="0.5"
    />
  </svg>
  <div
    style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); pointer-events: none;"
  >
    <div
      style="position: absolute; inset: -22px; border-radius: 999px; background: radial-gradient(circle, color-mix(in oklab, var(--accent) 40%, transparent) 0%, transparent 65%);"
    />
    <div
      style="position: relative; width: 30px; height: 30px; border-radius: 999px; background: var(--accent); border: 3px solid var(--surface); box-shadow: 0 8px 22px rgba(0,0,0,0.18), 0 2px 4px rgba(0,0,0,0.12); display: flex; align-items: center; justify-content: center; color: white; font-size: 12px; font-weight: 600;"
    >
      ★
    </div>
  </div>
  <div
    style="position: absolute; left: 14%; top: 40%; transform: translate(-50%, -100%); display: flex; flex-direction: column; align-items: center; gap: 2px; pointer-events: none;"
  >
    <div
      class="mono tabular"
      style="font-size: 11px; padding: 4px 9px; border-radius: 999px; background: var(--surface); color: var(--ink); border: 1px solid var(--line-strong); box-shadow: 0 6px 14px -6px rgba(14,19,32,0.25), 0 1px 2px rgba(14,19,32,0.08); white-space: nowrap; font-weight: 500; letter-spacing: -0.005em;"
    >
      $2,850
    </div>
    <div
      style="width: 6px; height: 6px; border-radius: 999px; background: var(--ink); border: 1.5px solid var(--surface);"
    />
  </div>
  <div
    style="position: absolute; left: 72%; top: 22%; transform: translate(-50%, -100%); display: flex; flex-direction: column; align-items: center; gap: 2px; pointer-events: none;"
  >
    <div
      class="mono tabular"
      style="font-size: 11px; padding: 4px 9px; border-radius: 999px; background: var(--surface); color: var(--ink); border: 1px solid var(--line-strong); box-shadow: 0 6px 14px -6px rgba(14,19,32,0.25), 0 1px 2px rgba(14,19,32,0.08); white-space: nowrap; font-weight: 500; letter-spacing: -0.005em;"
    >
      $3,050
    </div>
    <div
      style="width: 6px; height: 6px; border-radius: 999px; background: var(--ink); border: 1.5px solid var(--surface);"
    />
  </div>
  <div
    style="position: absolute; left: 36%; top: 64%; transform: translate(-50%, -100%); display: flex; flex-direction: column; align-items: center; gap: 2px; pointer-events: none;"
  >
    <div
      class="mono tabular"
      style="font-size: 11px; padding: 4px 9px; border-radius: 999px; background: var(--surface); color: var(--ink); border: 1px solid var(--line-strong); box-shadow: 0 6px 14px -6px rgba(14,19,32,0.25), 0 1px 2px rgba(14,19,32,0.08); white-space: nowrap; font-weight: 500; letter-spacing: -0.005em;"
    >
      $2,750
    </div>
    <div
      style="width: 6px; height: 6px; border-radius: 999px; background: var(--ink); border: 1.5px solid var(--surface);"
    />
  </div>
  <div
    style="position: absolute; left: 75%; top: 68%; transform: translate(-50%, -100%); display: flex; flex-direction: column; align-items: center; gap: 2px; pointer-events: none;"
  >
    <div
      class="mono tabular"
      style="font-size: 11px; padding: 4px 9px; border-radius: 999px; background: var(--surface); color: var(--ink); border: 1px solid var(--line-strong); box-shadow: 0 6px 14px -6px rgba(14,19,32,0.25), 0 1px 2px rgba(14,19,32,0.08); white-space: nowrap; font-weight: 500; letter-spacing: -0.005em;"
    >
      $3,200
    </div>
    <div
      style="width: 6px; height: 6px; border-radius: 999px; background: var(--ink); border: 1.5px solid var(--surface);"
    />
  </div>
  <div
    style="position: absolute; left: 58%; top: 78%; transform: translate(-50%, -100%); display: flex; flex-direction: column; align-items: center; gap: 2px; pointer-events: none;"
  >
    <div
      class="mono tabular"
      style="font-size: 11px; padding: 4px 9px; border-radius: 999px; background: var(--surface); color: var(--ink); border: 1px solid var(--line-strong); box-shadow: 0 6px 14px -6px rgba(14,19,32,0.25), 0 1px 2px rgba(14,19,32,0.08); white-space: nowrap; font-weight: 500; letter-spacing: -0.005em;"
    >
      $2,900
    </div>
    <div
      style="width: 6px; height: 6px; border-radius: 999px; background: var(--ink); border: 1.5px solid var(--surface);"
    />
  </div>
  <div
    class="mono"
    style="position: absolute; top: 12px; left: 14px; padding: 4px 10px; border-radius: 6px; background: color-mix(in oklab, var(--surface) 90%, transparent); backdrop-filter: blur(4px); border: 1px solid var(--line); font-size: 10px; letter-spacing: 0.1em; text-transform: uppercase; color: var(--muted);"
  >
    5702-5 Buttermill Ave, Vaughan
  </div>
  <div
    aria-hidden="true"
    style="position: absolute; bottom: 12px; right: 12px; display: flex; flex-direction: column; border-radius: 6px; overflow: hidden; box-shadow: 0 2px 6px rgba(14,19,32,0.08);"
  >
    <div
      style="width: 26px; height: 26px; background: var(--surface); color: var(--ink); font-size: 14px; font-weight: 500; display: flex; align-items: center; justify-content: center;"
    >
      +
    </div>
    <div
      style="width: 26px; height: 26px; background: var(--surface); color: var(--ink); font-size: 14px; font-weight: 500; display: flex; align-items: center; justify-content: center; border-top: 1px solid var(--line);"
    >
      −
    </div>
  </div>
  <div
    class="mono"
    style="position: absolute; bottom: 8px; left: 14px; font-size: 9px; letter-spacing: 0.12em; text-transform: uppercase; color: var(--muted); background: color-mix(in oklab, var(--surface) 85%, transparent); padding: 2px 6px; border-radius: 4px;"
  >
    © Mapbox · OpenStreetMap
  </div>
  <div
    style="position: absolute; top: 10px; right: 10px; background: color-mix(in oklab, var(--surface) 90%, transparent); backdrop-filter: blur(6px); border-radius: 6px; padding: 4px 10px; font-size: 10px; font-family: "Geist Mono", monospace; letter-spacing: 0.1em; text-transform: uppercase; color: var(--muted); border: 1px solid var(--line);"
  >
    Map placeholder · Mapbox GL JS
  </div>
</div>
`;

exports[`PropertyHero > matches snapshot 1`] = `
<section
  class="container"
  style="padding-top: 56px; padding-bottom: 48px;"
>
  <div
    class="row gap-12"
    style="margin-bottom: 28px; color: var(--muted); font-size: 13px; display: flex; align-items: center; flex-wrap: wrap; gap: 12px;"
  >
    <button
      aria-label="Analyze another listing"
      style="display: inline-flex; align-items: center; gap: 6px; background: none; border: medium; cursor: pointer; color: inherit; font-size: inherit; font-family: inherit; padding: 0px; transition: color 0.15s ease;"
    >
      <span
        aria-hidden="true"
        style="transform: rotate(180deg); display: inline-flex;"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.6"
          viewBox="0 0 24 24"
          width="13"
        >
          <path
            d="M5 12h14M13 5l7 7-7 7"
          />
        </svg>
      </span>
      Analyze another listing
    </button>
    <span
      style="opacity: 0.4;"
    >
      ·
    </span>
    <span
      class="mono"
      style="font-size: 11px; letter-spacing: 0.14em; text-transform: uppercase;"
    >
      Report · 
      Investor view
    </span>
    <span
      style="opacity: 0.4;"
    >
      ·
    </span>
    <span
      style="display: inline-flex; align-items: center; gap: 6px;"
    >
      <span
        aria-hidden="true"
        class="live-dot"
        style="width: 6px; height: 6px; border-radius: 999px; background: var(--pass);"
      />
      Live recalc · sliders below
    </span>
  </div>
  <div
    style="display: grid; grid-template-columns: 1.5fr 1fr; gap: clamp(28px, 3.5vw, 52px); align-items: flex-start;"
  >
    <div
      class="col"
      style="gap: 28px;"
    >
      <div
        style="display: grid; grid-template-columns: 2fr 1fr; gap: 8px; height: 360px;"
      >
        <div
          class="photo-ph"
          style="border-radius: 18px; height: 100%; overflow: hidden;"
        >
          <span>
            exterior · 
            condo apartment
          </span>
        </div>
        <div
          class="col"
          style="gap: 8px;"
        >
          <div
            class="photo-ph"
            style="border-radius: 14px; flex: 1 1 0%; position: relative; overflow: hidden;"
          >
            <span>
              living
            </span>
          </div>
          <div
            class="photo-ph"
            style="border-radius: 14px; flex: 1 1 0%; position: relative; overflow: hidden;"
          >
            <span>
              kitchen
            </span>
          </div>
          <div
            class="photo-ph"
            style="border-radius: 14px; flex: 1 1 0%; position: relative; overflow: hidden;"
          >
            <span>
              floorplan
            </span>
            <div
              class="mono"
              style="position: absolute; right: 10px; bottom: 10px; font-size: 10px; letter-spacing: 0.1em; padding: 3px 8px; background: color-mix(in oklab, var(--surface) 90%, transparent); border-radius: 999px; color: var(--ink); backdrop-filter: blur(4px);"
            >
              + more
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
        style="gap: 18px;"
      >
        <div
          style="display: flex; gap: 8px; flex-wrap: wrap;"
        >
          <span
            class="chip"
          >
            Investment · For sale
          </span>
          <span
            class="chip"
          >
            Vaughan · L4K
          </span>
          <span
            class="chip"
          >
            Condo · 950 sqft
          </span>
        </div>
        <h1
          class="serif"
          style="text-wrap: balance; letter-spacing: -0.035em; margin-top: 4px;"
        >
          Unit 5702 · 5 Buttermill Avenue
        </h1>
        <div
          style="font-size: 16px; color: var(--muted);"
        >
          Vaughan · L4K · VMC Corridor
        </div>
        <div
          style="display: flex; gap: 20px; flex-wrap: wrap; margin-top: 8px; font-size: 14px; color: var(--ink-2); align-items: center;"
        >
          <span
            style="display: inline-flex; align-items: center; gap: 8px;"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.6"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M3 11l9-7 9 7v9a1 1 0 0 1-1 1h-5v-6h-6v6H4a1 1 0 0 1-1-1z"
              />
            </svg>
            3
             bed · 
            2
             bath
          </span>
          <span
            style="display: inline-flex; align-items: center; gap: 8px;"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="10"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.6"
              viewBox="0 0 24 24"
              width="10"
            >
              <circle
                cx="12"
                cy="12"
                fill="currentColor"
                r="3"
              />
            </svg>
            950
             sqft
          </span>
          <span
            style="display: inline-flex; align-items: center; gap: 8px;"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.6"
              viewBox="0 0 24 24"
              width="14"
            >
              <circle
                cx="8"
                cy="15"
                r="4"
              />
              <path
                d="M11 13l9-9M16 8l3 3"
              />
            </svg>
            1
             parking
          </span>
          <span
            style="display: inline-flex; align-items: center; gap: 8px;"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.6"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M4 19V5M4 19h16M8 15v-4M12 15V8M16 15v-6"
              />
            </svg>
            Built 
            2020
          </span>
        </div>
      </div>
      <div
        aria-label="Map showing rental comps near Unit 5702 · 5 Buttermill Avenue, Vaughan · L4K · VMC Corridor"
        role="img"
        style="position: relative; height: 180px; border-radius: 14px; overflow: hidden; background: var(--bg-elev); border: 1px solid var(--line);"
      >
        <svg
          aria-hidden="true"
          height="100%"
          preserveAspectRatio="xMidYMid slice"
          style="display: block;"
          viewBox="0 0 400 240"
          width="100%"
        >
          <defs>
            <lineargradient
              id="mapWash"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            >
              <stop
                offset="0%"
                stop-color="color-mix(in oklab, var(--accent) 5%, var(--bg-elev))"
              />
              <stop
                offset="100%"
                stop-color="var(--bg-elev)"
              />
            </lineargradient>
            <pattern
              height="6"
              id="mapMicro"
              patternUnits="userSpaceOnUse"
              width="6"
            >
              <rect
                fill="transparent"
                height="6"
                width="6"
              />
              <circle
                cx="0.5"
                cy="0.5"
                fill="currentColor"
                opacity="0.05"
                r="0.4"
              />
            </pattern>
          </defs>
          <rect
            fill="url(#mapWash)"
            height="240"
            width="400"
          />
          <rect
            fill="url(#mapMicro)"
            height="240"
            style="color: var(--ink);"
            width="400"
          />
          <path
            d="M 280 -20 Q 320 30 380 50 L 410 60 L 410 -10 Z"
            fill="color-mix(in oklab, var(--accent) 14%, var(--bg-elev))"
            opacity="0.45"
          />
          <path
            d="M 280 -20 Q 320 30 380 50"
            fill="none"
            stroke="color-mix(in oklab, var(--accent) 25%, transparent)"
            stroke-width="0.6"
          />
          <rect
            fill="color-mix(in oklab, var(--pass) 20%, transparent)"
            height="68"
            rx="3"
            stroke="color-mix(in oklab, var(--pass) 25%, transparent)"
            stroke-width="0.5"
            width="118"
            x="170"
            y="78"
          />
          <rect
            fill="none"
            height="64"
            rx="2"
            stroke="color-mix(in oklab, var(--pass) 18%, transparent)"
            stroke-dasharray="2 3"
            stroke-width="0.5"
            width="114"
            x="172"
            y="80"
          />
          <g
            style="color: var(--line-strong);"
          >
            <g>
              <line
                opacity="0.45"
                stroke="currentColor"
                stroke-width="9"
                x1="-10"
                x2="410"
                y1="84"
                y2="80"
              />
              <line
                stroke="var(--bg-elev)"
                stroke-width="7"
                x1="-10"
                x2="410"
                y1="84"
                y2="80"
              />
              <line
                opacity="0.85"
                stroke="var(--bg)"
                stroke-width="5"
                x1="-10"
                x2="410"
                y1="84"
                y2="80"
              />
              <line
                opacity="0.7"
                stroke="color-mix(in oklab, var(--accent) 40%, transparent)"
                stroke-dasharray="3 4"
                stroke-width="0.5"
                x1="-10"
                x2="410"
                y1="84"
                y2="80"
              />
            </g>
            <g>
              <line
                opacity="0.45"
                stroke="currentColor"
                stroke-width="9"
                x1="-10"
                x2="410"
                y1="152"
                y2="155"
              />
              <line
                stroke="var(--bg-elev)"
                stroke-width="7"
                x1="-10"
                x2="410"
                y1="152"
                y2="155"
              />
              <line
                opacity="0.85"
                stroke="var(--bg)"
                stroke-width="5"
                x1="-10"
                x2="410"
                y1="152"
                y2="155"
              />
              <line
                opacity="0.7"
                stroke="color-mix(in oklab, var(--accent) 40%, transparent)"
                stroke-dasharray="3 4"
                stroke-width="0.5"
                x1="-10"
                x2="410"
                y1="152"
                y2="155"
              />
            </g>
            <g>
              <line
                opacity="0.45"
                stroke="currentColor"
                stroke-width="9"
                x1="168"
                x2="170"
                y1="-10"
                y2="250"
              />
              <line
                stroke="var(--bg-elev)"
                stroke-width="7"
                x1="168"
                x2="170"
                y1="-10"
                y2="250"
              />
              <line
                opacity="0.85"
                stroke="var(--bg)"
                stroke-width="5"
                x1="168"
                x2="170"
                y1="-10"
                y2="250"
              />
            </g>
            <g>
              <line
                opacity="0.45"
                stroke="currentColor"
                stroke-width="9"
                x1="290"
                x2="288"
                y1="-10"
                y2="250"
              />
              <line
                stroke="var(--bg-elev)"
                stroke-width="7"
                x1="290"
                x2="288"
                y1="-10"
                y2="250"
              />
              <line
                opacity="0.85"
                stroke="var(--bg)"
                stroke-width="5"
                x1="290"
                x2="288"
                y1="-10"
                y2="250"
              />
            </g>
          </g>
          <g
            opacity="0.7"
            stroke="var(--line)"
            stroke-width="2"
          >
            <line
              x1="-10"
              x2="170"
              y1="22"
              y2="22"
            />
            <line
              x1="200"
              x2="410"
              y1="22"
              y2="22"
            />
            <line
              x1="-10"
              x2="170"
              y1="46"
              y2="46"
            />
            <line
              x1="200"
              x2="410"
              y1="46"
              y2="46"
            />
            <line
              x1="-10"
              x2="170"
              y1="112"
              y2="112"
            />
            <line
              x1="-10"
              x2="170"
              y1="138"
              y2="138"
            />
            <line
              x1="290"
              x2="410"
              y1="112"
              y2="112"
            />
            <line
              x1="290"
              x2="410"
              y1="138"
              y2="138"
            />
            <line
              x1="-10"
              x2="170"
              y1="180"
              y2="180"
            />
            <line
              x1="-10"
              x2="170"
              y1="206"
              y2="206"
            />
            <line
              x1="290"
              x2="410"
              y1="180"
              y2="180"
            />
            <line
              x1="290"
              x2="410"
              y1="206"
              y2="206"
            />
            <line
              x1="40"
              x2="40"
              y1="-10"
              y2="250"
            />
            <line
              x1="86"
              x2="86"
              y1="-10"
              y2="78"
            />
            <line
              x1="86"
              x2="86"
              y1="160"
              y2="250"
            />
            <line
              x1="130"
              x2="130"
              y1="-10"
              y2="78"
            />
            <line
              x1="130"
              x2="130"
              y1="160"
              y2="250"
            />
            <line
              x1="218"
              x2="218"
              y1="-10"
              y2="78"
            />
            <line
              x1="218"
              x2="218"
              y1="160"
              y2="250"
            />
            <line
              x1="252"
              x2="252"
              y1="-10"
              y2="78"
            />
            <line
              x1="252"
              x2="252"
              y1="160"
              y2="250"
            />
            <line
              x1="338"
              x2="338"
              y1="-10"
              y2="250"
            />
            <line
              x1="380"
              x2="380"
              y1="-10"
              y2="250"
            />
          </g>
          <g
            fill="var(--ink)"
            opacity="0.07"
          >
            <rect
              height="14"
              rx="1.5"
              width="18"
              x="44"
              y="30"
            />
            <rect
              height="14"
              rx="1.5"
              width="16"
              x="66"
              y="30"
            />
            <rect
              height="14"
              rx="1.5"
              width="22"
              x="86"
              y="30"
            />
            <rect
              height="14"
              rx="1.5"
              width="14"
              x="112"
              y="30"
            />
            <rect
              height="14"
              rx="1.5"
              width="24"
              x="130"
              y="30"
            />
            <rect
              height="18"
              rx="1.5"
              width="14"
              x="44"
              y="50"
            />
            <rect
              height="18"
              rx="1.5"
              width="22"
              x="62"
              y="50"
            />
            <rect
              height="18"
              rx="1.5"
              width="18"
              x="88"
              y="50"
            />
            <rect
              height="18"
              rx="1.5"
              width="16"
              x="110"
              y="50"
            />
            <rect
              height="18"
              rx="1.5"
              width="24"
              x="130"
              y="50"
            />
            <rect
              height="12"
              rx="1.5"
              width="18"
              x="180"
              y="22"
            />
            <rect
              height="12"
              rx="1.5"
              width="14"
              x="202"
              y="22"
            />
            <rect
              height="12"
              rx="1.5"
              width="22"
              x="220"
              y="22"
            />
            <rect
              height="12"
              rx="1.5"
              width="16"
              x="246"
              y="22"
            />
            <rect
              height="12"
              rx="1.5"
              width="20"
              x="266"
              y="22"
            />
            <rect
              height="16"
              rx="1.5"
              width="22"
              x="180"
              y="40"
            />
            <rect
              height="16"
              rx="1.5"
              width="18"
              x="206"
              y="40"
            />
            <rect
              height="16"
              rx="1.5"
              width="22"
              x="228"
              y="40"
            />
            <rect
              height="16"
              rx="1.5"
              width="18"
              x="254"
              y="40"
            />
            <rect
              height="16"
              rx="1.5"
              width="10"
              x="276"
              y="40"
            />
            <rect
              height="14"
              rx="1.5"
              width="18"
              x="296"
              y="30"
            />
            <rect
              height="14"
              rx="1.5"
              width="16"
              x="318"
              y="30"
            />
            <rect
              height="14"
              rx="1.5"
              width="24"
              x="338"
              y="30"
            />
            <rect
              height="14"
              rx="1.5"
              width="14"
              x="366"
              y="30"
            />
            <rect
              height="18"
              rx="1.5"
              width="18"
              x="296"
              y="50"
            />
            <rect
              height="18"
              rx="1.5"
              width="22"
              x="318"
              y="50"
            />
            <rect
              height="18"
              rx="1.5"
              width="16"
              x="344"
              y="50"
            />
            <rect
              height="18"
              rx="1.5"
              width="18"
              x="364"
              y="50"
            />
            <rect
              height="16"
              rx="1.5"
              width="22"
              x="44"
              y="96"
            />
            <rect
              height="16"
              rx="1.5"
              width="18"
              x="70"
              y="96"
            />
            <rect
              height="16"
              rx="1.5"
              width="22"
              x="92"
              y="96"
            />
            <rect
              height="16"
              rx="1.5"
              width="14"
              x="118"
              y="96"
            />
            <rect
              height="16"
              rx="1.5"
              width="22"
              x="136"
              y="96"
            />
            <rect
              height="20"
              rx="1.5"
              width="18"
              x="44"
              y="116"
            />
            <rect
              height="20"
              rx="1.5"
              width="22"
              x="66"
              y="116"
            />
            <rect
              height="20"
              rx="1.5"
              width="16"
              x="92"
              y="116"
            />
            <rect
              height="20"
              rx="1.5"
              width="22"
              x="112"
              y="116"
            />
            <rect
              height="20"
              rx="1.5"
              width="20"
              x="138"
              y="116"
            />
            <rect
              height="14"
              rx="1.5"
              width="22"
              x="310"
              y="96"
            />
            <rect
              height="14"
              rx="1.5"
              width="18"
              x="336"
              y="96"
            />
            <rect
              height="14"
              rx="1.5"
              width="16"
              x="358"
              y="96"
            />
            <rect
              height="22"
              rx="1.5"
              width="18"
              x="310"
              y="114"
            />
            <rect
              height="22"
              rx="1.5"
              width="22"
              x="332"
              y="114"
            />
            <rect
              height="22"
              rx="1.5"
              width="16"
              x="358"
              y="114"
            />
            <rect
              height="14"
              rx="1.5"
              width="16"
              x="44"
              y="164"
            />
            <rect
              height="14"
              rx="1.5"
              width="22"
              x="64"
              y="164"
            />
            <rect
              height="14"
              rx="1.5"
              width="18"
              x="90"
              y="164"
            />
            <rect
              height="14"
              rx="1.5"
              width="22"
              x="112"
              y="164"
            />
            <rect
              height="14"
              rx="1.5"
              width="16"
              x="138"
              y="164"
            />
            <rect
              height="18"
              rx="1.5"
              width="22"
              x="44"
              y="182"
            />
            <rect
              height="18"
              rx="1.5"
              width="18"
              x="70"
              y="182"
            />
            <rect
              height="18"
              rx="1.5"
              width="22"
              x="92"
              y="182"
            />
            <rect
              height="18"
              rx="1.5"
              width="16"
              x="118"
              y="182"
            />
            <rect
              height="18"
              rx="1.5"
              width="20"
              x="138"
              y="182"
            />
            <rect
              height="16"
              rx="1.5"
              width="22"
              x="296"
              y="162"
            />
            <rect
              height="16"
              rx="1.5"
              width="18"
              x="322"
              y="162"
            />
            <rect
              height="16"
              rx="1.5"
              width="22"
              x="344"
              y="162"
            />
            <rect
              height="18"
              rx="1.5"
              width="18"
              x="296"
              y="184"
            />
            <rect
              height="18"
              rx="1.5"
              width="22"
              x="318"
              y="184"
            />
            <rect
              height="18"
              rx="1.5"
              width="22"
              x="344"
              y="184"
            />
          </g>
          <rect
            fill="none"
            height="239"
            stroke="var(--line)"
            stroke-width="0.5"
            width="399"
            x="0.5"
            y="0.5"
          />
        </svg>
        <div
          style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); pointer-events: none;"
        >
          <div
            style="position: absolute; inset: -22px; border-radius: 999px; background: radial-gradient(circle, color-mix(in oklab, var(--accent) 40%, transparent) 0%, transparent 65%);"
          />
          <div
            style="position: relative; width: 30px; height: 30px; border-radius: 999px; background: var(--accent); border: 3px solid var(--surface); box-shadow: 0 8px 22px rgba(0,0,0,0.18), 0 2px 4px rgba(0,0,0,0.12); display: flex; align-items: center; justify-content: center; color: white; font-size: 12px; font-weight: 600;"
          >
            ★
          </div>
        </div>
        <div
          style="position: absolute; left: 14%; top: 40%; transform: translate(-50%, -100%); display: flex; flex-direction: column; align-items: center; gap: 2px; pointer-events: none;"
        >
          <div
            class="mono tabular"
            style="font-size: 11px; padding: 4px 9px; border-radius: 999px; background: var(--surface); color: var(--ink); border: 1px solid var(--line-strong); box-shadow: 0 6px 14px -6px rgba(14,19,32,0.25), 0 1px 2px rgba(14,19,32,0.08); white-space: nowrap; font-weight: 500; letter-spacing: -0.005em;"
          >
            $2,850
          </div>
          <div
            style="width: 6px; height: 6px; border-radius: 999px; background: var(--ink); border: 1.5px solid var(--surface);"
          />
        </div>
        <div
          style="position: absolute; left: 72%; top: 22%; transform: translate(-50%, -100%); display: flex; flex-direction: column; align-items: center; gap: 2px; pointer-events: none;"
        >
          <div
            class="mono tabular"
            style="font-size: 11px; padding: 4px 9px; border-radius: 999px; background: var(--surface); color: var(--ink); border: 1px solid var(--line-strong); box-shadow: 0 6px 14px -6px rgba(14,19,32,0.25), 0 1px 2px rgba(14,19,32,0.08); white-space: nowrap; font-weight: 500; letter-spacing: -0.005em;"
          >
            $3,050
          </div>
          <div
            style="width: 6px; height: 6px; border-radius: 999px; background: var(--ink); border: 1.5px solid var(--surface);"
          />
        </div>
        <div
          style="position: absolute; left: 36%; top: 64%; transform: translate(-50%, -100%); display: flex; flex-direction: column; align-items: center; gap: 2px; pointer-events: none;"
        >
          <div
            class="mono tabular"
            style="font-size: 11px; padding: 4px 9px; border-radius: 999px; background: var(--surface); color: var(--ink); border: 1px solid var(--line-strong); box-shadow: 0 6px 14px -6px rgba(14,19,32,0.25), 0 1px 2px rgba(14,19,32,0.08); white-space: nowrap; font-weight: 500; letter-spacing: -0.005em;"
          >
            $2,750
          </div>
          <div
            style="width: 6px; height: 6px; border-radius: 999px; background: var(--ink); border: 1.5px solid var(--surface);"
          />
        </div>
        <div
          style="position: absolute; left: 75%; top: 68%; transform: translate(-50%, -100%); display: flex; flex-direction: column; align-items: center; gap: 2px; pointer-events: none;"
        >
          <div
            class="mono tabular"
            style="font-size: 11px; padding: 4px 9px; border-radius: 999px; background: var(--surface); color: var(--ink); border: 1px solid var(--line-strong); box-shadow: 0 6px 14px -6px rgba(14,19,32,0.25), 0 1px 2px rgba(14,19,32,0.08); white-space: nowrap; font-weight: 500; letter-spacing: -0.005em;"
          >
            $3,200
          </div>
          <div
            style="width: 6px; height: 6px; border-radius: 999px; background: var(--ink); border: 1.5px solid var(--surface);"
          />
        </div>
        <div
          style="position: absolute; left: 58%; top: 78%; transform: translate(-50%, -100%); display: flex; flex-direction: column; align-items: center; gap: 2px; pointer-events: none;"
        >
          <div
            class="mono tabular"
            style="font-size: 11px; padding: 4px 9px; border-radius: 999px; background: var(--surface); color: var(--ink); border: 1px solid var(--line-strong); box-shadow: 0 6px 14px -6px rgba(14,19,32,0.25), 0 1px 2px rgba(14,19,32,0.08); white-space: nowrap; font-weight: 500; letter-spacing: -0.005em;"
          >
            $2,900
          </div>
          <div
            style="width: 6px; height: 6px; border-radius: 999px; background: var(--ink); border: 1.5px solid var(--surface);"
          />
        </div>
        <div
          class="mono"
          style="position: absolute; top: 12px; left: 14px; padding: 4px 10px; border-radius: 6px; background: color-mix(in oklab, var(--surface) 90%, transparent); backdrop-filter: blur(4px); border: 1px solid var(--line); font-size: 10px; letter-spacing: 0.1em; text-transform: uppercase; color: var(--muted);"
        >
          Unit 5702 · 5 Buttermill Avenue, Vaughan · L4K · VMC Corridor
        </div>
        <div
          aria-hidden="true"
          style="position: absolute; bottom: 12px; right: 12px; display: flex; flex-direction: column; border-radius: 6px; overflow: hidden; box-shadow: 0 2px 6px rgba(14,19,32,0.08);"
        >
          <div
            style="width: 26px; height: 26px; background: var(--surface); color: var(--ink); font-size: 14px; font-weight: 500; display: flex; align-items: center; justify-content: center;"
          >
            +
          </div>
          <div
            style="width: 26px; height: 26px; background: var(--surface); color: var(--ink); font-size: 14px; font-weight: 500; display: flex; align-items: center; justify-content: center; border-top: 1px solid var(--line);"
          >
            −
          </div>
        </div>
        <div
          class="mono"
          style="position: absolute; bottom: 8px; left: 14px; font-size: 9px; letter-spacing: 0.12em; text-transform: uppercase; color: var(--muted); background: color-mix(in oklab, var(--surface) 85%, transparent); padding: 2px 6px; border-radius: 4px;"
        >
          © Mapbox · OpenStreetMap
        </div>
        <div
          style="position: absolute; top: 10px; right: 10px; background: color-mix(in oklab, var(--surface) 90%, transparent); backdrop-filter: blur(6px); border-radius: 6px; padding: 4px 10px; font-size: 10px; font-family: "Geist Mono", monospace; letter-spacing: 0.1em; text-transform: uppercase; color: var(--muted); border: 1px solid var(--line);"
        >
          Map placeholder · Mapbox GL JS
        </div>
      </div>
    </div>
    <div
      class="card col"
      style="padding: 32px; gap: 24px; position: sticky; top: 84px; order: 0;"
    >
      <div
        class="col"
        style="align-items: center; gap: 8px;"
      >
        <div
          aria-label="Deal score: 8 out of 100"
          style="display: flex; flex-direction: column; align-items: center; gap: 8px;"
        >
          <div
            style="position: relative; width: 180px; height: 180px;"
          >
            <svg
              aria-hidden="true"
              height="180"
              role="img"
              viewBox="0 0 180 180"
              width="180"
            >
              <circle
                cx="90"
                cy="90"
                fill="none"
                r="83"
                stroke="var(--line)"
                stroke-width="14"
              />
              <circle
                cx="90"
                cy="90"
                fill="none"
                r="83"
                stroke="var(--fail)"
                stroke-dasharray="521.5043804959057"
                stroke-dashoffset="521.5043804959057"
                stroke-linecap="round"
                stroke-width="14"
                style="transition: stroke-dashoffset 1.4s cubic-bezier(.2,.7,.2,1);"
                transform="rotate(-90 90 90)"
              />
            </svg>
            <div
              style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 16px;"
            >
              <span
                class="serif tabular"
                style="font-size: 75.6px; line-height: 1; font-weight: 400; color: var(--ink);"
              >
                8
              </span>
              <span
                class="mono"
                style="font-size: 9px; color: var(--muted); text-transform: uppercase; letter-spacing: 0.12em; text-align: center; margin-top: 6px; white-space: nowrap;"
              >
                Deal score / 100
              </span>
              <span
                style="margin-top: 6px; font-size: 11px; font-weight: 500; color: var(--fail); padding: 3px 10px; border-radius: 999px; border: 1px solid var(--fail); background: color-mix(in oklab, var(--fail) 8%, transparent); white-space: nowrap;"
              >
                Hard pass
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
        style="text-align: center; align-items: center; gap: 8px;"
      >
        <div
          class="mono"
          style="font-size: 10px; letter-spacing: 0.18em; text-transform: uppercase; color: var(--fail);"
        >
          Hard pass
        </div>
        <div
          class="serif"
          style="font-size: 20px; line-height: 1.2; text-wrap: balance;"
        >
          Fails on multiple fundamentals.
        </div>
      </div>
      <div
        class="divider"
        style="border-top: 1px solid var(--line);"
      />
      <div
        class="col"
        style="gap: 10px;"
      >
        <div
          class="mono"
          style="font-size: 10px; letter-spacing: 0.14em; text-transform: uppercase; color: var(--muted);"
        >
          Score breakdown
        </div>
        <div
          class="col"
          style="gap: 4px;"
        >
          <div
            style="display: flex; justify-content: space-between; font-size: 12px;"
          >
            <span
              style="color: var(--ink-2);"
            >
              Cap rate
            </span>
            <span
              class="mono tabular"
              style="color: var(--muted);"
            >
              0
               / 
              25
            </span>
          </div>
          <div
            style="height: 3px; border-radius: 999px; background: var(--line);"
          >
            <div
              style="width: 0%; height: 100%; border-radius: 999px; background: var(--fail);"
            />
          </div>
        </div>
        <div
          class="col"
          style="gap: 4px;"
        >
          <div
            style="display: flex; justify-content: space-between; font-size: 12px;"
          >
            <span
              style="color: var(--ink-2);"
            >
              Cash flow
            </span>
            <span
              class="mono tabular"
              style="color: var(--muted);"
            >
              0
               / 
              25
            </span>
          </div>
          <div
            style="height: 3px; border-radius: 999px; background: var(--line);"
          >
            <div
              style="width: 0%; height: 100%; border-radius: 999px; background: var(--fail);"
            />
          </div>
        </div>
        <div
          class="col"
          style="gap: 4px;"
        >
          <div
            style="display: flex; justify-content: space-between; font-size: 12px;"
          >
            <span
              style="color: var(--ink-2);"
            >
              CoC return
            </span>
            <span
              class="mono tabular"
              style="color: var(--muted);"
            >
              0
               / 
              20
            </span>
          </div>
          <div
            style="height: 3px; border-radius: 999px; background: var(--line);"
          >
            <div
              style="width: 0%; height: 100%; border-radius: 999px; background: var(--fail);"
            />
          </div>
        </div>
        <div
          class="col"
          style="gap: 4px;"
        >
          <div
            style="display: flex; justify-content: space-between; font-size: 12px;"
          >
            <span
              style="color: var(--ink-2);"
            >
              DSCR
            </span>
            <span
              class="mono tabular"
              style="color: var(--muted);"
            >
              0
               / 
              15
            </span>
          </div>
          <div
            style="height: 3px; border-radius: 999px; background: var(--line);"
          >
            <div
              style="width: 0%; height: 100%; border-radius: 999px; background: var(--fail);"
            />
          </div>
        </div>
        <div
          class="col"
          style="gap: 4px;"
        >
          <div
            style="display: flex; justify-content: space-between; font-size: 12px;"
          >
            <span
              style="color: var(--ink-2);"
            >
              Demand
            </span>
            <span
              class="mono tabular"
              style="color: var(--muted);"
            >
              3
               / 
              10
            </span>
          </div>
          <div
            style="height: 3px; border-radius: 999px; background: var(--line);"
          >
            <div
              style="width: 30%; height: 100%; border-radius: 999px; background: var(--caution);"
            />
          </div>
        </div>
        <div
          style="display: flex; justify-content: space-between; font-size: 12px; margin-top: 4px;"
        >
          <span
            style="color: var(--ink-2);"
          >
            Risk deductions
          </span>
          <span
            class="mono tabular"
            style="color: var(--fail);"
          >
            −
            6
          </span>
        </div>
      </div>
      <div
        class="divider"
        style="border-top: 1px solid var(--line);"
      />
      <div
        class="col"
        style="gap: 12px;"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline;"
        >
          <span
            class="mono"
            style="font-size: 10px; letter-spacing: 0.16em; text-transform: uppercase; color: var(--muted);"
          >
            Asking
          </span>
          <span
            class="serif tabular"
            style="font-size: 32px; line-height: 1;"
          >
            $729,900
          </span>
        </div>
        <div
          style="display: flex; justify-content: space-between; font-size: 13px; color: var(--ink-2);"
        >
          <span>
            Cash flow
          </span>
          <span
            class="mono tabular"
            style="font-weight: 600; color: var(--fail);"
          >
            −$2,431/mo
          </span>
        </div>
        <div
          style="display: flex; justify-content: space-between; font-size: 13px; color: var(--ink-2);"
        >
          <span>
            Cap rate
          </span>
          <span
            class="mono tabular"
            style="font-weight: 600; color: var(--ink);"
          >
            1.47%
          </span>
        </div>
        <div
          style="display: flex; justify-content: space-between; font-size: 13px; color: var(--ink-2);"
        >
          <span>
            DSCR
          </span>
          <span
            class="mono tabular"
            style="font-weight: 600; color: var(--ink);"
          >
            0.44×
          </span>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`RentalCompsBar > matches snapshot 1`] = `
<div
  aria-label="Rental comps: low $2,700, mid $2,900, high $3,200, estimate $2,900"
  class="col gap-16"
  data-testid="rental-comps-bar"
  role="region"
>
  <div
    style="display: flex; justify-content: space-between; align-items: flex-end;"
  >
    <div
      class="col"
      style="gap: 4px;"
    >
      <div
        class="mono"
        style="font-size: 10px; letter-spacing: 0.14em; text-transform: uppercase; color: var(--muted);"
      >
        Asking rent
      </div>
      <div
        style="display: flex; align-items: baseline; gap: 4px;"
      >
        <span
          class="serif tabular"
          style="font-size: 28px; line-height: 1; color: var(--ink);"
        >
          $2,900
        </span>
        <span
          class="mono"
          style="font-size: 12px; color: var(--muted);"
        >
          /mo
        </span>
      </div>
    </div>
    <span
      style="font-size: 11px; font-weight: 500; letter-spacing: 0.01em; padding: 5px 10px; border-radius: 999px; color: var(--pass); border: 1px solid color-mix(in oklab, var(--pass) 35%, transparent); background: color-mix(in oklab, var(--pass) 8%, transparent);"
    >
      ● 
      At market
    </span>
  </div>
  <div
    style="position: relative; height: 28px; margin-top: 8px;"
  >
    <div
      style="position: absolute; top: 50%; transform: translateY(-50%); left: 0px; right: 0px; height: 6px; border-radius: 999px; background: linear-gradient(90deg, color-mix(in oklab, var(--accent) 18%, var(--bg-elev)), color-mix(in oklab, var(--accent) 55%, transparent), color-mix(in oklab, var(--accent) 18%, var(--bg-elev)));"
    />
    <div
      style="position: absolute; left: 0%; top: 50%; transform: translate(-50%, -50%); width: 1.5px; height: 14px; background: var(--ink); opacity: 0.18; pointer-events: none;"
    />
    <div
      style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); width: 1.5px; height: 14px; background: var(--ink); opacity: 0.4; pointer-events: none;"
    />
    <div
      style="position: absolute; left: 100%; top: 50%; transform: translate(-50%, -50%); width: 1.5px; height: 14px; background: var(--ink); opacity: 0.18; pointer-events: none;"
    />
    <div
      aria-label="Estimated rent: $2,900"
      class="comp-marker"
      role="img"
      style="position: absolute; left: 40%; top: 50%; transform: translate(-50%, -50%); width: 28px; height: 28px; display: flex; align-items: center; justify-content: center; cursor: pointer;"
    >
      <div
        class="comp-marker-dot"
        style="width: 14px; height: 14px; background: var(--ink); border-radius: 3px; transform: rotate(45deg); border: 2px solid var(--surface); box-shadow: 0 2px 6px rgba(14,19,32,0.18); transition: transform .15s ease, background-color .15s ease;"
      />
      <div
        class="comp-marker-tip"
        style="position: absolute; bottom: calc(100% + 6px); left: 50%; transform: translateX(-50%); background: var(--ink); color: var(--bg); padding: 6px 10px; border-radius: 8px; font-size: 11px; font-weight: 500; white-space: nowrap; opacity: 0; pointer-events: none; transition: opacity .15s ease, transform .15s ease; transform-origin: bottom center; box-shadow: 0 6px 16px rgba(0,0,0,.18);"
      >
        <span
          class="mono tabular"
        >
          $2,900
          /mo
        </span>
        <span
          style="color: color-mix(in oklab, var(--bg) 55%, transparent); margin-left: 6px;"
        >
          · ask
        </span>
        <div
          style="position: absolute; top: 100%; left: 50%; transform: translateX(-50%); width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-top: 5px solid var(--ink);"
        />
      </div>
    </div>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-top: 2px;"
  >
    <div
      class="col"
      style="align-items: flex-start; gap: 2px;"
    >
      <div
        class="mono"
        style="font-size: 10px; letter-spacing: 0.08em; color: var(--muted);"
      >
        P25 · low
      </div>
      <div
        class="mono tabular"
        style="font-size: 12px; font-weight: 500; color: var(--ink);"
      >
        $2,700
      </div>
    </div>
    <div
      class="col"
      style="align-items: center; gap: 2px;"
    >
      <div
        class="mono"
        style="font-size: 10px; letter-spacing: 0.08em; color: var(--muted);"
      >
        P50 · median
      </div>
      <div
        class="mono tabular"
        style="font-size: 12px; font-weight: 500; color: var(--ink);"
      >
        $2,900
      </div>
    </div>
    <div
      class="col"
      style="align-items: flex-end; gap: 2px;"
    >
      <div
        class="mono"
        style="font-size: 10px; letter-spacing: 0.08em; color: var(--muted);"
      >
        P75 · high
      </div>
      <div
        class="mono tabular"
        style="font-size: 12px; font-weight: 500; color: var(--ink);"
      >
        $3,200
      </div>
    </div>
  </div>
</div>
`;

exports[`RiskRow > matches snapshot 1`] = `
<div
  style="display: flex; align-items: stretch; border-radius: 12px; overflow: hidden; background: var(--surface); border: 1px solid var(--line); box-shadow: var(--shadow-card); opacity: 1;"
>
  <div
    aria-hidden="true"
    style="width: 4px; background: var(--fail); flex-shrink: 0;"
  />
  <div
    style="flex: 1 1 0%; padding: 14px 18px; background: color-mix(in oklab, var(--fail) 6%, transparent); display: flex; align-items: center; justify-content: space-between; gap: 16px; flex-wrap: wrap;"
  >
    <span
      style="font-size: 14px; font-weight: 500; color: var(--ink); text-decoration: none; opacity: 1;"
    >
      Condo-fee burden
    </span>
    <span
      class="mono"
      style="font-size: 12px; color: var(--ink-2); flex: 1 1 0%; text-align: right; text-decoration: none;"
    >
      $761/mo · 26% of rent
    </span>
  </div>
</div>
`;
